--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.13",
-    "@react-navigation/stack": "^7.3.2",
+    "@react-navigation/stack": "^7.3.3",
     "expo": "~53.0.8",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
@@ -19,9 +19,10 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-pager-view": "6.7.1",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "~4.10.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
