--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.3.3",
@@ -22,7 +23,9 @@
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.20.0",
+    "@expo/metro-runtime": "~5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
